--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,5 @@
   "installCommand": "npm ci",
   "devCommand": "npm run dev",
   "framework": null,
-  "outputDirectory": "dist"
+  "outputDirectory": "dist/public"
 }
